--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 authors = ["toidiu <apoorv@toidiu.com>"]
 
 [dependencies]
-blake2 = "0.8.0"
+failure = "^0.1"
+blake2 = "^0.8"
+serde = "^1.0"
+serde_derive = "^1.0"
