--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["toidiu <apoorv@toidiu.com>"]
 
 [dependencies]
 failure = "^0.1"
-blake2 = "^0.8"
+# blake2 = "^0.8"
 serde = "^1.0"
 serde_derive = "^1.0"
