--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,10 @@
 name = "consistent-rs"
 version = "0.1.0"
 authors = ["toidiu <apoorv@toidiu.com>"]
+edition = "2018"
 
 [dependencies]
 failure = "^0.1"
-# blake2 = "^0.8"
+blake2 = "^0.8"
 serde = "^1.0"
 serde_derive = "^1.0"
